--- a/health_web/src/main/webapp/pages/main.html
+++ b/health_web/src/main/webapp/pages/main.html
@@ -44,7 +44,7 @@
                                     <span style="display:block;">修改密码</span>
                                 </el-dropdown-item>
                                 <el-dropdown-item divided>
-                                        <span style="display:block;">退出</span>
+                                    <a href="/logout.do"> <span style="display:block;">退出</span></a>
                                     </el-dropdown-item>
                             </el-dropdown-menu>
                         </el-dropdown>
@@ -194,6 +194,14 @@
     $(function() {
             var wd = 200;
             $(".el-main").css('width', $('body').width() - wd + 'px');
+            // 获取角色
+            $.get("/user/getusername.do",res=>{
+                if (res.flag){
+                    vue.loginUsername=res.data;
+                } else {
+                   alert(res.message);
+                }
+            });
     });
 </script>
 </html>
