--- a/health_web/src/main/webapp/login.html
+++ b/health_web/src/main/webapp/login.html
@@ -33,7 +33,7 @@
                         <span class="svg-container">
                           <span class="username"></span>
                         </span>
-                        <input type="password" v-model="password" name="password" value="123456" placeholder="请输入密码"/>
+                        <input type="password" v-model="password" name="password" value="1234" placeholder="请输入密码"/>
                       </div>
                       <input type="button" style="width:100%;margin-bottom:30px;" value="登录" @click="login"></input>
                 </form>
@@ -49,7 +49,7 @@
         el:'#app',
         data:{
             username:'admin',
-            password:'admin'
+            password:'1234'
         },
         methods:{
             login(){
