年龄性别饼状图

--- a/health_web/src/main/webapp/pages/main.html
+++ b/health_web/src/main/webapp/pages/main.html
@@ -182,6 +182,12 @@
                         },
                         {
                             "path": "/5-3",
+                            "title": "会员年龄性别占比饼图",
+                            "linkUrl":"report_member_pro.html",
+                            "children":[]
+                        },
+                        {
+                            "path": "/5-4",
                             "title": "运营数据统计",
                             "linkUrl":"report_business.html",
                             "children":[]
